# echolate

./: .env.example  Dockerfile  LICENSE  Makefile  README.md  config.yaml  launch_web.py  pyproject.toml  requirements.txt  start.sh
app/: __init__.py  main.py  settings.py
app/analysis/: __init__.py  clarity.py  fillers.py  pacing.py  pauses.py  phonemes.py  preprocess.py  prosody.py  report.py  snr.py  tips.py
app/models/: __init__.py  asr.py  vad.py
app/utils/: __init__.py  audio_io.py  plotting.py  session_store.py
assets/sample_audio/: README.txt
cache/sessions/: sessions.json
cli/: __init__.py  echo_cli.py
scripts/: __init__.py  benchmark.py  setup_models.py
tests/: __init__.py  test_fillers.py  test_pacing.py  test_snr.py
webui/: __init__.py  app.py  components.py
